# agi

./: .gitignore  README.md
projects/contextshift-deid/: .gitignore  AGENTS.md  LEADERBOARD.md  Makefile  README.md  eval.py  prepare.py  program.md  pyproject.toml  results.tsv  train.py  train_action.py  train_candidate.py
projects/contextshift-deid/docs/: action_annotation_workflow.md  benchmark_schema.md  candidate_model_selection_ground_truth_20260318.md  codebook_v2.md  codebook_v3.md  math_ground_truth_benchmark_migration_20260321.md  privacy_first_action_sprint_20260316.md  upchieve_candidate_recall_adaptation_20260317.md  workplan.md
projects/contextshift-deid/legacy/: README.md
projects/contextshift-deid/roadmap/: milestone.md
projects/contextshift-deid/scripts/: analyze_upchieve_experiment.py  analyze_upchieve_zero_shot.py  annotate_action_pool.py  annotate_candidate_pool.py  audit_candidate_splits.py  build_action_annotation_pool.py  build_ground_truth_candidate_benchmark.py  build_upchieve_action_pilot.py  build_upchieve_action_train.py  build_upchieve_action_train_v2.py  build_upchieve_candidate_proxy.py  compare_action_annotations.py  compare_upchieve_llm_runs.py  compose_action_train_mix.py  compose_candidate_train_mix.py  evaluate_candidate_audit.py  evaluate_deferral.py  export_action_annotations.py  freeze_action_work_package.py  generate_local_smoke_models.py  generate_synthetic_benchmark.py  import_timss_science.py  import_upchieve_context_pilot.py  import_upchieve_math.py  merge_action_exports.py  predict_action.py  predict_candidate.py  (+11 more)
(+96 files in other folders)
