[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextshift-deid"
version = "0.1.0"
description = "Research scaffold for context-aware educational de-identification"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "protobuf>=7.34.0",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.1",
    "seqeval>=1.2.2",
    "tiktoken>=0.12.0",
    "torch==2.10.0",
    "transformers>=4.51.0",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
